--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
         </div>
         <div class="menu">
             <li> 
-                <a href="index.html">
+                <a href="news.html">
                     <i class='bx bxs-news'></i>
                     <span class="text">Bảng tin</span>
                 </a>
